--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,3 +2,9 @@
 <main class="main-content">
   <router-outlet></router-outlet>
 </main>
+
+<footer>
+  <img src="logoPL.png" alt="Logo" class="logo">
+  <h4>BY</h4>
+  <img src="REGULVANTCODE.png" alt="Logo" class="logo">
+</footer>
