--- a/src/app/musicos-grupo/musicos-grupo.component.css
+++ b/src/app/musicos-grupo/musicos-grupo.component.css
@@ -68,7 +68,7 @@
   position: relative;
   overflow: hidden;
   transition: all 0.3s ease;
-  margin-bottom: 200px;
+  /*margin-bottom: 200px;*/
 }
 
 .card::before {
